--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.3.5",
     "classnames": "^2.2.6",
     "date-fns": "^2.14.0",
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-modal": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
