--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
     "react": "^16.13.1",
+    "react-alert": "^7.0.1",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
