--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "material-ui-pickers": "^2.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
