--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.14.0",
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
